--- a/angular-ar/src/components/app/app.component.html
+++ b/angular-ar/src/components/app/app.component.html
@@ -1,49 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="content-language" content="en-EN" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<app-canvas
+[threshold]="0.6" 
+[debugCube]="false" 
+[isModelLightMapped]="true" 
+[shoeRightPath]="shoeRightPath"
+[scale]="1"
+[translation]="[0, -0.02, 0]"
+></app-canvas>
 
-    <title>BAREFOOT VTO</title>
+<div class="swapShoeDiv">
+    <button 
+    type="btn" 
+    class="swapShoeButton btn btn-light" 
+    (click)="swapShoe('../../assets/3d-models/barefoot-models/vansShoe.glb')">VANS</button>
+    <button 
+    type="btn" 
+    class="swapShoeButton btn btn-light"
+    (click)="swapShoe('../../assets/3d-models/barefoot-models/converseShoe2.glb')">CONVERSE</button>
+</div>
 
-    <style type='text/css'>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        position: fixed;
-        top: 0;
-        left: 0;
-      }
-      #handTrackerCanvas {
-        z-index: 1;
-      }
-      #ARCanvas {
-        z-index: 4;
-      }
-      canvas {
-        /* mirror the canvas - useful if camera is in selfie mode only: */
-        /*transform: rotateY(180deg);*/
-      }
-      .flipButton {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 5;
-      }
-    </style>
-  </head>
-  <body>
-    <div id='canvases'>
-      <!-- Canvas used by the hand tracker and displaying the video -->
-      <canvas id='handTrackerCanvas'></canvas>
-
-      <!-- Canvas displayed above, with the THREE.js scene -->
-      <canvas id='ARCanvas'></canvas>
-    </div>
-    <button class='flipButton' (click)='flip_camera()'>FLIP CAMERA</button>
-  </body>
-</html>
- 
