--- a/angular-ar/src/components/barefoot-vto/barefoot-vto.component.html
+++ b/angular-ar/src/components/barefoot-vto/barefoot-vto.component.html
@@ -8,5 +8,6 @@
     [translation]="[0, -0.02, 0]"
     [scanSettings]="scanSettings"
     [NNsPaths]="['../../neuralNets/NN_BAREFOOT_3.json']"
+    [modeName]="'barefoot-vto'"
     ></app-canvas>
 </div>
