--- a/angular-ar/src/components/shoes-on-vto/shoes-on-vto.component.html
+++ b/angular-ar/src/components/shoes-on-vto/shoes-on-vto.component.html
@@ -8,5 +8,6 @@
     [translation]="[0, -0.02, 0]"
     [scanSettings]="scanSettings"
     [NNsPaths]="['../../neuralNets/NN_FOOT_23.json']"
+    [modeName]="'shoes-on-vto'"
     ></app-canvas>
 </div>
