Added asics shoe, removed air jordan option

--- a/angular-ar/src/components/app/app.component.html
+++ b/angular-ar/src/components/app/app.component.html
@@ -19,6 +19,8 @@
                                     (click)="swapShoe('../../assets/3d-models/vansShoe.glb')">Vans</a></li>
                             <li><a class="dropdown-item"
                                     (click)="swapShoe('../../assets/3d-models/converseShoe2.glb')">Converse</a></li>
+                            <li><a class="dropdown-item"
+                                    (click)="swapShoe('../../assets/3d-models/asicsShoe.glb')">Asics</a></li>
                         </ul>
                     </div>
                 </li>
